--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lyraus-ui",
-  "version": "0.2.6b",
+  "version": "0.2.8-b",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
